--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 /*GENERAL */
 
@@ -27,9 +28,11 @@ h1{
     font-weight:bold;
     font-size:medium;
     width: 100%;
-    color: aliceblue;
-    
-    
+    color: aliceblue;   
+}
+
+.barraNav i{
+  font-size: 25px;
 }
 
 .carrusel{
@@ -147,8 +150,8 @@ a {
   margin: 45px;
   font-size:0;
   text-align: center;
-  width: 120px;
-  height: 120px;
+  width: 170px;
+  height: 170px;
   color: antiquewhite;
   border-radius: 60%;
 }
@@ -157,16 +160,16 @@ a {
   background-color: rgb(247, 68, 68);
   margin: 45px;
   font-size:0;
-  width: 190px;
-  height: 190px;
+  width: 240px;
+  height: 240px;
   color: antiquewhite;
   border-radius: 60%;
 }
 .logro3{
   background-color: rgb(247, 68, 68);
   margin: 45px;
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   font-size:0;
   color: antiquewhite;
   border-radius: 60%;
@@ -174,8 +177,8 @@ a {
 .logro4{
   background-color: rgb(247, 68, 68);
   margin: 45px;
-  width: 350px;
-  height: 350px;
+  width: 500px;
+  height: 500px;
   font-size:0;
   color: antiquewhite;
   border-radius: 60%;
